--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -75,7 +75,7 @@ jobs:
       # Deploy a preview version of the server!
 
       - name: Install SSH key
-        if: ${{github.event.pull_request.head.repo.full_name == github.repository}}
+        if: ${{github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'}}
         uses: benoitchantre/setup-ssh-authentication-action@1.0.0
         with:
           private-key: ${{ secrets.SSH_KEY }}
@@ -83,11 +83,11 @@ jobs:
           known-hosts: ${{ secrets.REMOTE_HOST }}
 
       - name: Check Syntax
-        if: ${{github.event.pull_request.head.repo.full_name == github.repository}}
+        if: ${{github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'}}
         run: pnpm syntax
 
       - name: Rsync to Server
-        if: ${{github.event.pull_request.head.repo.full_name == github.repository}}
+        if: ${{github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'}}
         run: ./build/rsync-deploy.sh
         env:
             SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
@@ -97,7 +97,7 @@ jobs:
             REMOTE_PATH: pr.destinyitemmanager.com/${{ github.event.number }}
 
       - name: Purge CloudFlare cache
-        if: ${{github.event.pull_request.head.repo.full_name == github.repository}}
+        if: ${{github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'}}
         run: ./build/purge-cloudflare.sh
         env:
           CLOUDFLARE_KEY: ${{ secrets.CLOUDFLARE_KEY }}
@@ -105,7 +105,7 @@ jobs:
           APP_DOMAIN: pr.destinyitemmanager.com/${{ github.event.number }}
 
       - name: Set preview deployment URL
-        if: ${{github.event.pull_request.head.repo.full_name == github.repository}}
+        if: ${{github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'}}
         id: deploy-url
         run: |
           echo "url=https://pr.dim.gg/${{ github.event.number }}/" >> $GITHUB_OUTPUT
