--- a/.github/workflows/pr-test-and-lint.yml
+++ b/.github/workflows/pr-test-and-lint.yml
@@ -27,8 +27,17 @@ jobs:
       - name: Install
         run: pnpm install --frozen-lockfile --prefer-offline
 
+      - name: Cache Manifest
+        id: destiny-manifest
+        uses: actions/cache@v3
+        with:
+          path: manifest-cache
+          key: destiny-manifest
+
       - name: Jest Test
         run: pnpm jest
+        env:
+          CLEAN_MANIFEST_CACHE: true
 
       - uses: actions/upload-artifact@v3  # upload test results
         if: success() || failure()        # run this step even if previous step failed
