Use pnpm's builtin parallel runner instead of npm-run-all

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "type": "module",
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --verbose",
-    "lint": "run-p lint:*",
+    "lint": "pnpm run '/^lint:.*/'",
     "lint:eslint": "eslint src --ext .js,.ts,.tsx",
     "lint:prettier": "prettier \"src/**/*.{js,ts,tsx,cjs,mjs,cts,mts,scss}\" --check",
     "lint:stylelint": "stylelint \"src/**/*.scss\"",
-    "lintcached": "run-p lintcached:*",
+    "lintcached": "pnpm run '/^lintcached:.*/'",
     "lintcached:eslint": "pnpm lint:eslint --cache --cache-location .eslintcache --cache-strategy content",
     "lint-report": "pnpm lint:eslint --output-file eslint_report.json --format json",
     "lint-report:cached": "pnpm lintcached:eslint --output-file eslint.results.json --format json",
-    "fix": "run-s fix:*",
+    "fix": "pnpm run --sequential '/^fix:.*/'",
     "fix:eslint": "pnpm lint:eslint --fix",
     "fix:json": "jsonsort src/locale",
     "fix:stylelint": "pnpm lint:stylelint --fix",
@@ -30,16 +30,14 @@
     "build:pr": "pnpm -s bundle --env=pr --node-env=production",
     "build:dev": "pnpm -s bundle --env=dev",
     "i18n": "i18next-scanner --config ./i18next-scanner.config.cjs",
-    "start": "run-p watch:i18n devserver",
+    "start": "pnpm run --stream '/^(watch:i18n|devserver)$/'",
     "devserver": "nodemon --delay 2 --watch config/webpack.ts --watch config/feature-flags.ts --watch config/content-security-policy.ts --watch pnpm-lock.yaml -e ts,js,json,lock --exec \"pnpm install --frozen-lockfile --prefer-offline && webpack serve --config ./config/webpack.ts --env=dev || pnpm touch\"",
     "touch": "node -e \"require('fs').utimes('config/webpack.ts', new Date(), new Date(), () => {})\"",
     "watch:i18n": "nodemon --watch config/i18n.json --exec \"pnpm i18n\"",
     "syntax": "find dist -name \"*.js\" | xargs -n 1 node --check",
     "install": "git submodule update --init --recursive",
     "dead-code": "ts-unused-exports tsconfig.json --allowUnusedTypes --allowUnusedEnums --showLineNumber | grep -v cssExports",
-    "bcu": "run-s bcu:*",
-    "bcu:build": "node src/build-browsercheck-utils.js",
-    "bcu:pretty": "prettier --write src/browsercheck-utils.js",
+    "bcu": "node src/build-browsercheck-utils.js && prettier --write src/browsercheck-utils.js",
     "fa-subset": "node src/fa-subset.js",
     "prepare": "husky install",
     "deps:stale": "pnpm outdated --long",
@@ -163,7 +161,6 @@
     "mini-svg-data-uri": "^1.4.4",
     "mkcert": "^3.1.0",
     "nodemon": "^3.0.1",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "postcss-assets-webpack-plugin": "^4.1.2",
     "postcss-loader": "^7.3.3",
