Modify dependabot schedule
And drop the "all dependencies" allow config in hopes it gets through everything

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,7 @@ updates:
     package-ecosystem: "npm"
     schedule:
       interval: "weekly"
+      time: "18:00" # UTC, = ~10AM Pacific
     groups:
       major:
         update-types:
@@ -12,16 +13,16 @@ updates:
         update-types:
           - minor
           - patch
-    allow:
-      - dependency-type: "all"
 
   - directory: /
     package-ecosystem: "github-actions"
     schedule:
       interval: "weekly"
+      time: "18:00" # UTC, = ~10AM Pacific
 
   # Dependabot doesn't support docker-compose yet
   # - directory: /
   #   package-ecosystem: "docker"
   #   schedule:
   #     interval: "weekly"
+  #     time: "18:00" # UTC, = ~10AM Pacific
