--- a/.github/workflows/pr-test-and-lint.yml
+++ b/.github/workflows/pr-test-and-lint.yml
@@ -35,7 +35,7 @@ jobs:
           key: destiny-manifest
 
       - name: Jest Test
-        run: pnpm jest
+        run: pnpm test
         env:
           CLEAN_MANIFEST_CACHE: true
 
