--- a/.github/workflows/pr-test-and-lint.yml
+++ b/.github/workflows/pr-test-and-lint.yml
@@ -32,7 +32,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: manifest-cache
-          key: destiny-manifest
+          key: destiny-manifest-${{ github.run_id }}
+          restore-keys: |
+            destiny-manifest
 
       - name: Jest Test
         run: pnpm test
