--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,6 +19,14 @@ updates:
     schedule:
       interval: "weekly"
       time: "18:00" # UTC, = ~10AM Pacific
+    groups:
+      major:
+        update-types:
+          - major
+      minor:
+        update-types:
+          - minor
+          - patch
 
   # Dependabot doesn't support docker-compose yet
   # - directory: /
