--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
     "**/*.m.scss.d.ts": true
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll": true
+    "source.fixAll": "explicit"
   },
   "jest.jestCommandLine": "pnpm test --",
   "[javascript]": {
@@ -64,5 +64,10 @@
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, pnpm-lock.yaml"
   },
-  "eslint.lintTask.options": "src"
+  "eslint.lintTask.options": "src",
+  "[javascript][typescript][typescriptreact]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "never"
+    }
+  }
 }
