--- a/package.json
+++ b/package.json
@@ -74,8 +74,9 @@
     "last 2 Opera versions"
   ],
   "resolutions": {
-    "@types/react": "18.2.43",
-    "react-redux": "^8.0.1",
+    "@types/react": "18.2.45",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0",
     "react-is": "^18.1.0"
   },
   "devDependencies": {
@@ -103,7 +104,7 @@
     "@types/react": "18.2.43",
     "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-dnd-multi-backend": "^6.0.6",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "@types/react-test-renderer": "^18.0.7",
     "@types/ua-parser-js": "^0.7.39",
     "@types/use-subscription": "^1.0.2",
@@ -111,8 +112,8 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.4",
     "@types/webpack-stats-plugin": "^0.3.5",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
@@ -126,8 +127,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-modules-typescript-loader": "^4.0.1",
-    "cssnano": "^6.0.1",
-    "eslint": "^8.55.0",
+    "cssnano": "^6.0.2",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-array-func": "^4.0.0",
     "eslint-plugin-css-modules": "^2.12.0",
@@ -156,7 +157,7 @@
     "lint-staged": "^15.2.0",
     "lodash-webpack-plugin": "^0.11.6",
     "markdown-loader": "^8.0.0",
-    "marked": "^11.0.1",
+    "marked": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "mini-svg-data-uri": "^1.4.4",
     "mkcert": "^3.2.0",
@@ -193,22 +194,22 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.6",
-    "@destinyitemmanager/dim-api-types": "^1.29.0",
+    "@destinyitemmanager/dim-api-types": "^1.30.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hello-pangea/dnd": "^16.5.0",
     "@popperjs/core": "^2.11.8",
     "@react-hook/resize-observer": "^1.2.6",
-    "@sentry/browser": "^7.86.0",
-    "@sentry/react": "^7.86.0",
-    "@sentry/types": "^7.86.0",
+    "@sentry/browser": "^7.88.0",
+    "@sentry/react": "^7.88.0",
+    "@sentry/types": "^7.88.0",
     "@tanstack/react-virtual": "3.0.1",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
     "@textcomplete/utils": "^0.1.13",
     "bungie-api-ts": "^5.0.0",
-    "caniuse-lite": "^1.0.30001568",
+    "caniuse-lite": "^1.0.30001570",
     "clsx": "^2.0.0",
     "comlink": "^4.4.1",
     "core-js": "^3.34.0",
@@ -218,7 +219,7 @@
     "fast-copy": "^3.0.1",
     "fast-equals": "^5.0.1",
     "framer-motion": "^10.16.16",
-    "i18next": "^23.7.8",
+    "i18next": "^23.7.11",
     "i18next-http-backend": "^2.4.2",
     "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
@@ -232,8 +233,8 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-redux": "^9.0.4",
-    "react-router": "^6.20.1",
-    "react-router-dom": "^6.20.1",
+    "react-router": "^6.21.0",
+    "react-router-dom": "^6.21.0",
     "react-textarea-autosize": "^8.5.3",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
@@ -258,7 +259,8 @@
   "pnpm": {
     "peerDependencyRules": {
       "allowedVersions": {
-        "@typescript-eslint/parser": "^6.2.0"
+        "@typescript-eslint/parser": "^6.2.0",
+        "stylelint": "^16.0.2"
       }
     },
     "allowedDeprecatedVersions": {
