--- a/.eslintrc
+++ b/.eslintrc
@@ -151,7 +151,9 @@
           {
             "group": ["testing/*"],
             "message": "You cannot use test helpers in regular code."
-          },
+          }
+        ],
+        "paths": [
           {
             "name": "i18next",
             "importNames": ["t"],
@@ -369,6 +371,22 @@
       "files": ["*.test.ts"],
       "rules": {
         "no-restricted-imports": "off"
+      }
+    },
+    {
+      "files": ["src/app/i18next-t.ts"],
+      "rules": {
+        "no-restricted-imports": [
+          "error",
+          {
+            "patterns": [
+              {
+                "group": ["testing/*"],
+                "message": "You cannot use test helpers in regular code."
+              }
+            ]
+          }
+        ]
       }
     }
   ]
