--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "cssnano": "^6.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-array-func": "^5.0.1",
+    "eslint-plugin-array-func": "^4.0.0",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -269,6 +269,7 @@
     "updateConfig": {
       "ignoreDependencies": [
         "@types/node",
+        "eslint-plugin-array-func",
         "fork-ts-checker-notifier-webpack-plugin",
         "fork-ts-checker-webpack-plugin",
         "@fortawesome/fontawesome-free",
