--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest -i src/testing/precache-manifest.test.ts && NODE_ENV=test LOCAL_MANIFEST=true jest --verbose",
     "lint": "pnpm run '/^lint:.*/'",
-    "lint:eslint": "eslint src --ext .js,.ts,.tsx",
+    "lint:eslint": "eslint src",
     "lint:prettier": "prettier \"src/**/*.{js,ts,tsx,cjs,mjs,cts,mts,scss}\" --check",
     "lint:stylelint": "stylelint \"src/**/*.scss\"",
     "lintcached": "pnpm run '/^lintcached:.*/'",
@@ -89,6 +89,7 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@babel/register": "^7.23.7",
+    "@eslint/eslintrc": "^3.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
     "@testing-library/react": "^14.2.1",
@@ -128,9 +129,8 @@
     "css-loader": "^6.10.0",
     "css-modules-typescript-loader": "^4.0.1",
     "cssnano": "^6.1.2",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-array-func": "^4.0.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-array-func": "^5.0.1",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -144,6 +144,7 @@
     "fork-ts-checker-notifier-webpack-plugin": "^5.0.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "generate-json-webpack-plugin": "^2.0.0",
+    "globals": "^15.0.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
@@ -185,6 +186,7 @@
     "ts-unused-exports": "^10.0.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.6.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
@@ -269,7 +271,6 @@
     "updateConfig": {
       "ignoreDependencies": [
         "@types/node",
-        "eslint-plugin-array-func",
         "fork-ts-checker-notifier-webpack-plugin",
         "fork-ts-checker-webpack-plugin",
         "@fortawesome/fontawesome-free",
