--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest -i src/testing/precache-manifest.test.ts && NODE_ENV=test LOCAL_MANIFEST=true jest --verbose",
     "lint": "pnpm run '/^lint:.*/'",
-    "lint:eslint": "eslint src --ext .js,.ts,.tsx",
+    "lint:eslint": "eslint --version && eslint src --ext .js,.ts,.tsx",
     "lint:prettier": "prettier \"src/**/*.{js,ts,tsx,cjs,mjs,cts,mts,scss}\" --check",
     "lint:stylelint": "stylelint \"src/**/*.scss\"",
     "lintcached": "pnpm run '/^lintcached:.*/'",
@@ -91,7 +91,7 @@
     "@babel/register": "^7.23.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^15.0.2",
     "@types/dom-chromium-installation-events": "^101.0.4",
     "@types/dom-screen-wake-lock": "^1.0.3",
     "@types/generate-json-webpack-plugin": "^0.3.7",
@@ -125,7 +125,7 @@
     "compression-webpack-plugin": "^11.1.0",
     "content-security-policy-builder": "^2.1.1",
     "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.10.0",
+    "css-loader": "^7.1.1",
     "css-modules-typescript-loader": "^4.0.1",
     "cssnano": "^6.1.2",
     "eslint": "^8.56.0",
@@ -173,7 +173,7 @@
     "sass": "^1.75.0",
     "sass-loader": "^14.2.0",
     "source-map-loader": "^5.0.0",
-    "style-loader": "^3.3.4",
+    "style-loader": "^4.0.0",
     "stylelint": "^16.3.1",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard-scss": "^13.1.0",
@@ -219,7 +219,7 @@
     "fast-copy": "^3.0.2",
     "fast-equals": "^5.0.1",
     "framer-motion": "^11.0.28",
-    "i18next": "^23.11.1",
+    "i18next": "^23.11.2",
     "i18next-http-backend": "^2.5.0",
     "immer": "^10.0.4",
     "lodash-es": "^4.17.21",
@@ -232,7 +232,7 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-textarea-autosize": "^8.5.3",
@@ -269,6 +269,7 @@
     "updateConfig": {
       "ignoreDependencies": [
         "@types/node",
+        "eslint",
         "eslint-plugin-array-func",
         "fork-ts-checker-notifier-webpack-plugin",
         "fork-ts-checker-webpack-plugin",
