manually call deploy-beta.yml after d2ai-auto-merge completes.
https://docs.github.com/en/actions/using-workflows/reusing-workflows

--- a/.github/workflows/d2ai-auto-merge.yml
+++ b/.github/workflows/d2ai-auto-merge.yml
@@ -15,3 +15,5 @@ jobs:
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  deploy_beta:
+    uses: DestinyItemManager/DIM/.github/workflows/deploy-beta.yml@master
