automerge add d2ai-bot requirement to deploy_beta step

--- a/.github/workflows/d2ai-auto-merge.yml
+++ b/.github/workflows/d2ai-auto-merge.yml
@@ -16,4 +16,5 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   deploy_beta:
+    needs: dependabot
     uses: DestinyItemManager/DIM/.github/workflows/deploy-beta.yml@master
