--- a/.github/workflows/d2ai-auto-merge.yml
+++ b/.github/workflows/d2ai-auto-merge.yml
@@ -6,7 +6,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  dependabot:
+  d2ai-automerge:
     runs-on: ubuntu-latest
     if: github.actor == 'd2ai-bot'
     steps:
@@ -14,7 +14,4 @@ jobs:
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  deploy_beta:
-    needs: dependabot
-    uses: DestinyItemManager/DIM/.github/workflows/deploy-beta.yml@master
+          GITHUB_TOKEN: ${{secrets.DEPENDABOT_PAT}}
