Update minimum browser compat for Chrome and iOS

--- a/package.json
+++ b/package.json
@@ -63,14 +63,14 @@
   },
   "homepage": "https://destinyitemmanager.com",
   "browserslist": [
-    "Chrome >= 85",
+    "Chrome >= 109",
+    "Edge >= 109",
     "last 2 ChromeAndroid versions",
     "last 2 FirefoxAndroid versions",
     "last 2 Firefox versions",
     "Firefox ESR",
     "last 2 Safari versions",
-    "iOS >= 14.5",
-    "last 2 Edge versions",
+    "iOS >= 16",
     "last 2 Opera versions"
   ],
   "resolutions": {
