--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@babel/register": "^7.23.7",
+    "@eslint/compat": "^1.0.1",
     "@eslint/eslintrc": "^3.0.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
@@ -128,9 +129,9 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "css-modules-typescript-loader": "^4.0.1",
+    "cssnano": "^7.0.1",
     "eslint": "^9.0.0",
     "eslint-plugin-array-func": "^5.0.1",
-    "cssnano": "^7.0.1",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-jsx-a11y": "^6.8.0",
