--- a/.github/workflows/i18n-bot-download.yml
+++ b/.github/workflows/i18n-bot-download.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.node-version'
+          node-version-file: '.nvmrc'
           cache: pnpm
 
       - name: Install
