--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -14,7 +14,7 @@ jobs:
         id: app-token
         with:
           # required
-          app-id: ${{ secrets.AUTOMERGE_APP_ID }}
+          app-id: 919630
           private-key: ${{ secrets.AUTOMERGE_PRIVATE_KEY }}
       - name: Dependabot metadata
         id: metadata
