--- a/.github/workflows/d2ai-auto-merge.yml
+++ b/.github/workflows/d2ai-auto-merge.yml
@@ -14,7 +14,7 @@ jobs:
         id: app-token
         with:
           # required
-          app-id: 919630
+          app-id:  ${{ secrets.AUTOMERGE_APP_ID }}
           private-key: ${{ secrets.AUTOMERGE_PRIVATE_KEY }}
       - name: Enable auto-merge for d2ai PRs
         run: gh pr merge --auto --merge "$PR_URL"
