--- a/.stylelintrc
+++ b/.stylelintrc
@@ -45,9 +45,8 @@
     ],
     "scss/at-function-pattern": [
       "^dim-([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
-      {
-        "message": "Expected function name to be kebab-case and prefixed with 'dim-'"
-      }
-    ]
+      { "message": "Expected function name to be kebab-case and prefixed with 'dim-'" }
+    ],
+    "scss/load-partial-extension": null
   }
 }
