--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
     "@testing-library/react": "^16.0.0",
+    "@types/chance": "^1.1.6",
     "@types/dom-chromium-installation-events": "^101.0.4",
     "@types/dom-screen-wake-lock": "^1.0.3",
     "@types/generate-json-webpack-plugin": "^0.3.7",
@@ -120,6 +121,7 @@
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-imports": "^2.0.0",
     "browserslist": "^4.23.2",
+    "chance": "^1.1.12",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^11.1.0",
     "content-security-policy-builder": "^2.2.0",
