Add regexp lint

--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-redux": "^4.1.0",
+    "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-sonarjs": "^1.0.4",
     "fontawesome-subset": "^4.4.0",
     "fork-ts-checker-notifier-webpack-plugin": "^5.0.0",
