--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@babel/register": "^7.24.6",
+    "@eslint-react/eslint-plugin": "^1.7.1",
     "@eslint/compat": "^1.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
@@ -134,7 +135,6 @@
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^5.0.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-jsx-expressions": "^1.3.2",
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -207,7 +207,7 @@
     "@sentry/browser": "^8.21.0",
     "@sentry/react": "^8.21.0",
     "@sentry/types": "^8.21.0",
-    "@tanstack/react-virtual": "3.8.3",
+    "@tanstack/react-virtual": "^3.8.4",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
     "@textcomplete/utils": "^0.1.13",
