--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,5 @@
 {
+  "plugins": ["stylelint-order"],
   "extends": ["stylelint-config-standard-scss", "stylelint-config-css-modules"],
   "rules": {
     "alpha-value-notation": "number",
@@ -47,6 +48,26 @@
       "^dim-([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
       { "message": "Expected function name to be kebab-case and prefixed with 'dim-'" }
     ],
-    "scss/load-partial-extension": null
+    "scss/load-partial-extension": null,
+    "order/order": [
+      "custom-properties",
+      "dollar-variables",
+      "declarations",
+      {
+        "type": "at-rule",
+        "name": "include",
+        "hasBlock": false
+      },
+      {
+        "type": "at-rule",
+        "name": "include",
+        "hasBlock": true
+      },
+      {
+        "type": "at-rule"
+      },
+      "rules"
+    ],
+    "declaration-block-no-shorthand-property-overrides": true
   }
 }
