--- a/package.json
+++ b/package.json
@@ -179,6 +179,7 @@
     "stylelint": "^16.8.2",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
     "svgo": "^3.3.2",
     "svgo-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
