--- a/package.json
+++ b/package.json
@@ -90,11 +90,11 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@babel/register": "^7.24.6",
-    "@eslint-react/eslint-plugin": "^1.12.1",
+    "@eslint-react/eslint-plugin": "^1.14.0",
     "@eslint/compat": "^1.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@sigmacomputing/babel-plugin-lodash": "^3.3.5",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^16.0.1",
     "@types/dom-chromium-installation-events": "^101.0.4",
     "@types/dom-screen-wake-lock": "^1.0.3",
     "@types/generate-json-webpack-plugin": "^0.3.7",
@@ -114,8 +114,8 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.5",
     "@types/webpack-stats-plugin": "^0.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
@@ -129,16 +129,16 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
-    "cssnano": "^7.0.5",
-    "eslint": "^9.8.0",
-    "eslint-plugin-array-func": "^5.0.1",
+    "cssnano": "^7.0.6",
+    "eslint": "^9.10.0",
+    "eslint-plugin-array-func": "^5.0.2",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^5.0.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-lodash": "^8.0.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-redux": "^4.1.0",
+    "eslint-plugin-react-redux": "^4.2.0",
     "eslint-plugin-regexp": "^2.6.0",
     "eslint-plugin-sonarjs": "^1.0.4",
     "fontawesome-subset": "^4.4.0",
@@ -156,15 +156,15 @@
     "jest-fetch-mock": "^3.0.3",
     "jest-junit": "^16.0.0",
     "json-sort-cli": "^4.0.4",
-    "lint-staged": "^15.2.9",
+    "lint-staged": "^15.2.10",
     "lodash-webpack-plugin": "^0.11.6",
     "markdown-loader": "^8.0.0",
-    "marked": "^14.1.0",
+    "marked": "^14.1.2",
     "mini-css-extract-plugin": "^2.9.1",
     "mini-svg-data-uri": "^1.4.4",
     "mkcert": "^3.2.0",
     "nodemon": "^3.1.4",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.45",
     "postcss-assets-webpack-plugin": "^4.1.2",
     "postcss-loader": "^8.1.1",
     "postcss-sort-media-queries": "^5.2.0",
@@ -172,11 +172,11 @@
     "prettier-plugin-organize-imports": "^4.0.0",
     "react-refresh": "^0.14.2",
     "react-test-renderer": "^18.3.1",
-    "sass": "^1.77.8",
+    "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
     "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
-    "stylelint": "^16.8.2",
+    "stylelint": "^16.9.0",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
@@ -187,17 +187,17 @@
     "ts-loader": "^9.5.1",
     "ts-unused-exports": "^10.1.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.3.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-notifier": "^1.15.0",
     "webpack-stats-plugin": "^1.1.3",
     "workbox-webpack-plugin": "7.1.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.25.4",
+    "@babel/runtime": "^7.25.6",
     "@destinyitemmanager/dim-api-types": "^1.33.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -205,23 +205,23 @@
     "@hello-pangea/dnd": "^16.6.0",
     "@popperjs/core": "^2.11.8",
     "@react-hook/resize-observer": "^2.0.2",
-    "@sentry/browser": "^8.26.0",
-    "@sentry/react": "^8.26.0",
-    "@sentry/types": "^8.26.0",
-    "@tanstack/react-virtual": "^3.10.4",
+    "@sentry/browser": "^8.30.0",
+    "@sentry/react": "^8.30.0",
+    "@sentry/types": "^8.30.0",
+    "@tanstack/react-virtual": "^3.10.7",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
     "@textcomplete/utils": "^0.1.13",
     "bungie-api-ts": "^5.1.0",
-    "caniuse-lite": "^1.0.30001653",
+    "caniuse-lite": "^1.0.30001660",
     "clsx": "^2.1.1",
     "comlink": "^4.4.1",
     "core-js": "^3.38.1",
     "dnd-core": "^16.0.1",
     "downshift": "^9.0.8",
     "fast-equals": "^5.0.1",
-    "framer-motion": "^11.3.30",
-    "i18next": "^23.14.0",
+    "framer-motion": "^11.5.4",
+    "i18next": "^23.15.1",
     "i18next-http-backend": "^2.6.1",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
@@ -236,8 +236,8 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-redux": "^9.1.2",
-    "react-router": "^6.26.1",
-    "react-router-dom": "^6.26.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
     "react-textarea-autosize": "^8.5.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
@@ -270,7 +270,8 @@
     "updateConfig": {
       "ignoreDependencies": [
         "@fortawesome/fontawesome-free",
-        "@fortawesome/fontawesome-svg-core"
+        "@fortawesome/fontawesome-svg-core",
+        "eslint-plugin-sonarjs"
       ]
     }
   }
