Replace _.once and _.throttle with es-toolkit

--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
     "core-js": "^3.38.1",
     "dnd-core": "^16.0.1",
     "downshift": "^9.0.8",
+    "es-toolkit": "^1.25.2",
     "fast-equals": "^5.0.1",
     "framer-motion": "^11.11.9",
     "i18next": "^23.16.2",
