--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "last 2 Opera versions"
   ],
   "resolutions": {
-    "@types/react": "18.3.12",
-    "react-redux": "^9.1.0",
-    "redux": "^5.0.0",
+    "@types/react": "$@types/react",
+    "react-redux": "$react-redux",
+    "redux": "$redux",
     "react-is": "^18.1.0"
   },
   "devDependencies": {
@@ -90,7 +90,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
-    "@eslint-react/eslint-plugin": "^1.20.1",
+    "@eslint-react/eslint-plugin": "^1.22.1",
     "@eslint/compat": "^1.2.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@testing-library/react": "^16.1.0",
@@ -101,17 +101,17 @@
     "@types/node": "22.0.2",
     "@types/papaparse": "^5.3.15",
     "@types/prop-types": "^15.7.14",
-    "@types/react": "18.3.12",
+    "@types/react": "19.0.2",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dnd-multi-backend": "^6.0.6",
-    "@types/react-dom": "^18.3.5",
+    "@types/react-dom": "^19.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "@types/use-subscription": "^1.0.2",
     "@types/webpack": "^5.28.5",
     "@types/webpack-env": "^1.18.5",
     "@types/webpack-stats-plugin": "^0.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
@@ -131,8 +131,8 @@
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^5.1.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "=5.0.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-redux": "^4.2.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-sonarjs": "^1.0.4",
@@ -140,7 +140,7 @@
     "fork-ts-checker-notifier-webpack-plugin": "^9.0.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "generate-json-webpack-plugin": "^2.0.0",
-    "globals": "^15.13.0",
+    "globals": "^15.14.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
@@ -151,7 +151,7 @@
     "jest-fetch-mock": "^3.0.3",
     "jest-junit": "^16.0.0",
     "json-sort-cli": "^4.0.4",
-    "lint-staged": "^15.2.11",
+    "lint-staged": "^15.3.0",
     "markdown-loader": "^8.0.0",
     "marked": "^15.0.4",
     "mini-css-extract-plugin": "^2.9.2",
@@ -182,7 +182,7 @@
     "ts-unused-exports": "^11.0.1",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.1",
+    "typescript-eslint": "^8.18.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.0",
@@ -199,21 +199,21 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@popperjs/core": "^2.11.8",
     "@react-hook/resize-observer": "^2.0.2",
-    "@sentry/browser": "^8.46.0",
-    "@sentry/react": "^8.46.0",
-    "@sentry/types": "^8.46.0",
+    "@sentry/browser": "^8.47.0",
+    "@sentry/react": "^8.47.0",
+    "@sentry/types": "^8.47.0",
     "@tanstack/react-virtual": "^3.11.2",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
     "@textcomplete/utils": "^0.1.13",
     "bungie-api-ts": "^5.1.0",
-    "caniuse-lite": "^1.0.30001689",
+    "caniuse-lite": "^1.0.30001690",
     "clsx": "^2.1.1",
     "comlink": "^4.4.2",
     "core-js": "^3.39.0",
     "dnd-core": "^16.0.1",
     "downshift": "^9.0.8",
-    "es-toolkit": "^1.30.1",
+    "es-toolkit": "^1.31.0",
     "fast-equals": "^5.0.1",
     "i18next": "^23.16.8",
     "i18next-http-backend": "^2.7.1",
@@ -221,16 +221,16 @@
     "memoize-one": "^6.0.0",
     "motion": "^11.15.0",
     "papaparse": "^5.4.1",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-aria": "^3.36.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-multi-backend": "^8.1.2",
     "react-dnd-touch-backend": "^16.0.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-redux": "^9.2.0",
-    "react-router": "^7.0.2",
+    "react-router": "^7.1.1",
     "react-textarea-autosize": "^8.5.6",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
