--- a/package.json
+++ b/package.json
@@ -214,11 +214,11 @@
     "downshift": "^9.0.8",
     "es-toolkit": "^1.30.1",
     "fast-equals": "^5.0.1",
-    "framer-motion": "^11.15.0",
     "i18next": "^23.16.8",
     "i18next-http-backend": "^2.7.1",
     "immer": "^10.1.1",
     "memoize-one": "^6.0.0",
+    "motion": "^11.15.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-aria": "^3.36.0",
