--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/register": "^7.25.9",
-    "@eslint-react/eslint-plugin": "^1.20.0",
+    "@eslint-react/eslint-plugin": "^1.20.1",
     "@eslint/compat": "^1.2.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@testing-library/react": "^16.1.0",
@@ -104,8 +104,8 @@
     "@types/react": "18.3.12",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dnd-multi-backend": "^6.0.6",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-test-renderer": "^18.3.1",
     "@types/ua-parser-js": "^0.7.39",
     "@types/use-subscription": "^1.0.2",
     "@types/webpack": "^5.28.5",
@@ -127,13 +127,13 @@
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
     "cssnano": "^7.0.6",
-    "eslint": "^9.10.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-array-func": "^5.0.2",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-github": "^5.1.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "=5.0.0",
     "eslint-plugin-react-redux": "^4.2.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-sonarjs": "^1.0.4",
@@ -200,9 +200,9 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@popperjs/core": "^2.11.8",
     "@react-hook/resize-observer": "^2.0.2",
-    "@sentry/browser": "^8.45.1",
-    "@sentry/react": "^8.45.1",
-    "@sentry/types": "^8.45.1",
+    "@sentry/browser": "^8.46.0",
+    "@sentry/react": "^8.46.0",
+    "@sentry/types": "^8.46.0",
     "@tanstack/react-virtual": "^3.11.2",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
@@ -217,8 +217,8 @@
     "es-toolkit": "^1.30.1",
     "fast-equals": "^5.0.1",
     "framer-motion": "^11.15.0",
-    "i18next": "^23.16.5",
-    "i18next-http-backend": "^2.6.2",
+    "i18next": "^23.16.8",
+    "i18next-http-backend": "^2.7.1",
     "immer": "^10.1.1",
     "memoize-one": "^6.0.0",
     "papaparse": "^5.4.1",
