--- a/package.json
+++ b/package.json
@@ -265,7 +265,8 @@
       "ignoreDependencies": [
         "@fortawesome/fontawesome-free",
         "@fortawesome/fontawesome-svg-core",
-        "eslint-plugin-sonarjs"
+        "eslint-plugin-sonarjs",
+        "ua-parser-js"
       ]
     }
   }
