--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "react-refresh": "^0.16.0",
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
+    "sonda": "^0.6.2",
     "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
     "stylelint": "^16.12.0",
