--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "eslint-plugin-github": "^5.1.5",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-hooks": "=5.0.0",
     "eslint-plugin-react-redux": "^4.2.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-sonarjs": "^1.0.4",
