--- a/package.json
+++ b/package.json
@@ -183,7 +183,7 @@
     "tsconfig-paths-webpack-plugin": "^4.2.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
-    "webpack": "^5.99.0",
+    "webpack": "5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
     "webpack-notifier": "^1.15.0",
