--- a/.github/workflows/i18n-bot-upload.yml
+++ b/.github/workflows/i18n-bot-upload.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           upload_sources: true
           upload_translations: false
-          source: src/locale/en.json
-          translation: src/locale/%android_code%.json
           project_id: ${{ secrets.CROWDIN_PROJECT_ID }}
           token: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
         env:
+          CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
+          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: porcelain check
