--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "babel-plugin-optimize-clsx": "^2.6.2",
     "babel-plugin-transform-imports": "^2.0.0",
     "browserslist": "^4.25.0",
+    "chalk": "^5.4.1",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^11.1.0",
     "content-security-policy-builder": "^2.3.0",
