Move process-utils tests

--- a/src/app/loadout-builder/process-worker/tsconfig.json
+++ b/src/app/loadout-builder/process-worker/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "app/*": ["../../*"],
-      "data/*": ["../../../data/*"]
+      "data/*": ["../../../data/*"],
+      "testing/*": ["../../../testing/*"]
     }
   },
   "include": ["./*", "../../../global.d.ts"]
