--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "type": "module",
   "scripts": {
     "test": "jest -i src/testing/precache-manifest.test.ts && NODE_ENV=test LOCAL_MANIFEST=true jest --verbose",
+    "test:e2e": "playwright test",
+    "test:e2e:server": "E2E_MOCK_DATA=true webpack serve --config ./config/webpack.ts --env=dev --port=8081",
     "lint": "pnpm run '/^lint:.*/'",
     "lint:eslint": "eslint src",
     "lint:prettier": "prettier \"src/**/*.{js,ts,tsx,cjs,mjs,cts,mts,scss}\" --check",
@@ -92,6 +94,7 @@
     "@babel/register": "^7.27.1",
     "@eslint-react/eslint-plugin": "^1.52.2",
     "@eslint/compat": "^1.3.0",
+    "@playwright/test": "^1.53.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.0",
     "@testing-library/react": "^16.3.0",
     "@types/dom-chromium-installation-events": "^101.0.4",
