remove all keys with empty strings, un-escape some escaped unicode
copy i18n.json over en.json on run
remove obsolete keys from en.json

--- a/.github/workflows/i18n-bot-download.yml
+++ b/.github/workflows/i18n-bot-download.yml
@@ -43,6 +43,9 @@ jobs:
       - name: build browsercheck utils
         run: pnpm bcu
 
+      - name: i18n utils
+        run: pnpm i18n
+
       - name: porcelain check
         uses: dorny/paths-filter@v3
         id: filter
